services/cv-enhancer/src/core/tmp.txt
[INFO] 2026-03-03 16:09:17,946 [RapidOCR] base.py:22: Using engine_name: torch
[INFO] 2026-03-03 16:09:18,764 [RapidOCR] device_config.py:50: Using CPU device
[INFO] 2026-03-03 16:09:19,284 [RapidOCR] download_file.py:68: Initiating download: https://www.modelscope.cn/models/RapidAI/RapidOCR/resolve/v3.6.0/torch/PP-OCRv4/det/ch_PP-OCRv4_det_infer.pth
[INFO] 2026-03-03 16:09:21,861 [RapidOCR] download_file.py:82: Download size: 13.83MB
[INFO] 2026-03-03 16:09:24,548 [RapidOCR] download_file.py:95: Successfully saved to: /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_PP-OCRv4_det_infer.pth
[INFO] 2026-03-03 16:09:24,631 [RapidOCR] main.py:50: Using /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_PP-OCRv4_det_infer.pth
[INFO] 2026-03-03 16:10:20,716 [RapidOCR] base.py:22: Using engine_name: torch
[INFO] 2026-03-03 16:10:20,717 [RapidOCR] device_config.py:50: Using CPU device
[INFO] 2026-03-03 16:10:20,718 [RapidOCR] download_file.py:68: Initiating download: https://www.modelscope.cn/models/RapidAI/RapidOCR/resolve/v3.6.0/torch/PP-OCRv4/cls/ch_ptocr_mobile_v2.0_cls_infer.pth
[INFO] 2026-03-03 16:10:22,115 [RapidOCR] download_file.py:82: Download size: 0.56MB
[INFO] 2026-03-03 16:10:22,204 [RapidOCR] download_file.py:95: Successfully saved to: /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_ptocr_mobile_v2.0_cls_infer.pth
[INFO] 2026-03-03 16:10:22,212 [RapidOCR] main.py:50: Using /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_ptocr_mobile_v2.0_cls_infer.pth
[INFO] 2026-03-03 16:10:22,571 [RapidOCR] base.py:22: Using engine_name: torch
[INFO] 2026-03-03 16:10:22,572 [RapidOCR] device_config.py:50: Using CPU device
[INFO] 2026-03-03 16:10:22,574 [RapidOCR] download_file.py:68: Initiating download: https://www.modelscope.cn/models/RapidAI/RapidOCR/resolve/v3.6.0/torch/PP-OCRv4/rec/ch_PP-OCRv4_rec_infer.pth
[INFO] 2026-03-03 16:10:23,610 [RapidOCR] download_file.py:82: Download size: 25.67MB
[INFO] 2026-03-03 16:10:26,714 [RapidOCR] download_file.py:95: Successfully saved to: /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_PP-OCRv4_rec_infer.pth
[INFO] 2026-03-03 16:10:26,720 [RapidOCR] main.py:50: Using /usr/local/lib/python3.11/site-packages/rapidocr/models/ch_PP-OCRv4_rec_infer.pth
2026-03-03 16:10:27,442 [INFO] docling.models.stages.ocr.auto_ocr_model: Auto OCR model selected rapidocr with torch.
2026-03-03 16:10:27,454 [INFO] docling.models.factories.base_factory: Loading plugin 'docling_defaults'
2026-03-03 16:10:27,595 [INFO] docling.models.factories: Registered layout engines: ['layout_object_detection', 'docling_layout_default', 'docling_experimental_table_crops_layout']
2026-03-03 16:10:27,775 [INFO] docling.utils.accelerator_utils: Accelerator device: 'cpu'
2026-03-03 16:11:10,770 [INFO] docling.models.factories.base_factory: Loading plugin 'docling_defaults'
2026-03-03 16:11:11,026 [INFO] docling.models.factories: Registered table structure engines: ['docling_tableformer']
2026-03-03 16:12:07,134 [INFO] docling.utils.accelerator_utils: Accelerator device: 'cpu'
2026-03-03 16:12:19,993 [INFO] docling.pipeline.base_pipeline: Processing document cv.pdf
2026-03-03 16:13:36,782 [INFO] docling.document_converter: Finished converting document cv.pdf in 356.80 sec.
2026-03-03 16:13:58,120 [INFO] infrastructure.parsers.docling_adapter: DoclingParser: extracted 4911 characters from '/tmp/radiance_cv_ej6u4vxd/cv.pdf'.
2026-03-03 16:13:58,621 [INFO] core.use_cases.analyze_cv_use_case: Step 3 ✓ Extracted 4911 characters from CV.
2026-03-03 16:13:58,621 [INFO] core.use_cases.analyze_cv_use_case: Step 4: Running LLM pipeline (Gemini).
2026-03-03 16:13:58,732 [INFO] infrastructure.adapters.gemini_llm_adapter: GeminiLLMAdapter: starting pipeline.
2026-03-03 16:14:03,987 [INFO] infrastructure.adapters.gemini_llm_adapter: Pipeline ▶ Analyzer: invoking Gemini for score/gaps/red-flags.
2026-03-03 16:14:06,587 [INFO] google_genai.models: AFC is enabled with max remote calls: 10.
2026-03-03 16:14:44,162 [INFO] httpx: HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent "HTTP/1.1 200 OK"
2026-03-03 16:14:44,579 [INFO] infrastructure.adapters.gemini_llm_adapter: Pipeline ✓ Analyzer — score: 88, gaps: 9, red flags: 2.
2026-03-03 16:14:44,582 [INFO] infrastructure.adapters.gemini_llm_adapter: Pipeline ▶ Enhancer: invoking Gemini for STAR rewrite.
2026-03-03 16:14:44,704 [INFO] google_genai.models: AFC is enabled with max remote calls: 10.
2026-03-03 16:15:06,404 [INFO] httpx: HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent "HTTP/1.1 200 OK"
2026-03-03 16:15:06,410 [INFO] infrastructure.adapters.gemini_llm_adapter: Pipeline ✓ Enhancer — produced 5318 characters.
2026-03-03 16:15:06,411 [INFO] infrastructure.adapters.gemini_llm_adapter: GeminiLLMAdapter: pipeline complete.
2026-03-03 16:15:06,411 [INFO] core.use_cases.analyze_cv_use_case: Step 4 ✓ Score: 88, gaps: 9, red flags: 2.
2026-03-03 16:15:06,411 [INFO] core.use_cases.analyze_cv_use_case: Step 5: Converting Markdown CV to LaTeX via Jinja2.
2026-03-03 16:15:07,252 [ERROR] core.use_cases.analyze_cv_use_case: AnalyzeCVUseCase: pipeline failed for job '3650c1fa3ec54e01b1300fd1234d524e': Expected an expression, got 'end of print statement'
Traceback (most recent call last):
  File "/app/src/core/use_cases/analyze_cv_use_case.py", line 129, in execute
    latex_code: str = self._latex_compiler.markdown_to_latex(
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/app/src/infrastructure/adapters/latex_compiler_adapter.py", line 194, in markdown_to_latex
    template = self._env.get_template(_TEMPLATE_NAME)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/usr/local/lib/python3.11/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/app/src/infrastructure/templates/resume_template.tex", line 2, in template
    % Radiance CV Template — Jinja2 managed (delimiters: << >> for vars, <% %> for blocks)
    ^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: Expected an expression, got 'end of print statement'
2026-03-03 16:15:07,836 [INFO] core.use_cases.analyze_cv_use_case: Job '3650c1fa3ec54e01b1300fd1234d524e' marked as FAILED.
INFO:     172.17.0.1:47130 - "GET /api/v1/analyses/3650c1fa3ec54e01b1300fd1234d524e HTTP/1.1" 200 OK
INFO:     172.17.0.1:47130 - "GET /api/v1/analyses/3650c1fa3ec54e01b1300fd1234d524e HTTP/1.1" 200 OK
